<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="saveInterval"
        android:name="saveInterval"
        android:defaultValue="10"
        android:title="@string/save_interval"
        android:inputType="number" />
    <EditTextPreference
        android:key="saveDistance"
        android:name="saveDistance"
        android:defaultValue="100"
        android:title="@string/save_distance"
        android:inputType="number" />
    <CheckBoxPreference
        android:key="keepScreen"
        android:name="keepScreen"
        android:defaultValue="false"
        android:title="@string/keep_screen" />
    <CheckBoxPreference
        android:key="followMe" 
        android:name="followMe"
        android:defaultValue="true"
        android:title="@string/follow_me" />
    <CheckBoxPreference
        android:key="usePost"
        android:name="usePost"
        android:defaultValue="false"
        android:title="@string/use_post" />
    <PreferenceScreen
        android:title="@string/setting_http_config"
        android:summary="@string/setting_http_config_description">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="jp.woh.android.gpslogger"
            android:targetClass="jp.woh.android.gpslogger.GPSSettingHttpActivity" />
	</PreferenceScreen>
    <PreferenceScreen
        android:title="@string/setting_ftp_config"
        android:summary="@string/setting_ftp_config_description">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="jp.woh.android.gpslogger"
            android:targetClass="jp.woh.android.gpslogger.GPSSettingFtpActivity" />
	</PreferenceScreen>
</PreferenceScreen>
