<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_head"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/markerTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textMultiLine" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_head"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <MultiAutoCompleteTextView
        android:id="@+id/markerDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textMultiLine" />

</LinearLayout>
